# 1.0.0-dev.18 3/5/14
3/5/14 pH meter: replace picker with up/down arrow buttons
3/4/14 port strings from Java
3/4/14 pH Meter: increase height of touch area for pH picker, increase space between pH picker and expand/collapse button
# 1.0.0-dev.17 3/4/14
3/4/14 ratio: increase to 3000 molecules, 1000 wasn't showing obvious differences for pH values in the 'linear' range
3/4/14 #23 stylistic, remove curly braces around layout code in MoleculeCountNode
3/4/14 #10 change ScientificNotationNode to use Property instead of setValue
3/3/14 #16 add note about indicator code to JSdoc
3/4/14 #22 stylistic, add blank lines before some comments
# 1.0.0-dev.16 2/28/14
3/4/14 RatioNode cleanup
3/4/14 enable 'ratio' feature in production version, since it's now usable on all platforms
3/4/14 ratio: use scenery to create molecule images, which are then drawn directly to canvas
3/4/14 delete node-per-molecule strategy from 'ratio' feature since it's unusably slow
3/4/14 increase performance of 'ratio' feature by using drawImage instead of arc
3/4/14 tweak spacing in 'H3O+/OH-' label
3/4/14 tweak the y-spacing above and below the beaker controls
3/4/14 tweak the x-spacing in formulas, so that H3O+ isn't so spread out
3/3/14 simplify FaucetFluidNode constructor, so that it uniformly takes a colorProperty parameter and doesn't rely on duck-typing of solution
3/3/14 #21 replace water property in model with direct access of Water constant at various use sites
3/3/14 #20 remove unused exponentRange parameter from LinearGraph constructor
3/3/14 #18 factor out options that are common to all ScientificNotationNode instantiations
3/3/14 #14 bind added to linked functions in MoleculeCountNode
3/3/14 #9 create arrow only for interactive graph indicators
3/3/14 #7 change '**' to '^' for exponent operator in model.txt
3/3/14 delete unused dropper-icon.png
3/3/14 #8 horizontally flip dropper images so that lighting is consistent with other parts of the sim