@@ -1,3 +1,4 @@
+3/5/14 exclude 'ratio' feature from production version until we work out issues
 # 1.0.0-dev.18 3/5/14
 3/5/14 pH meter: replace picker with up/down arrow buttons
 3/4/14 port strings from Java
